# gaia-light

./: Cargo.toml  MODELS.md  README.md
.github/workflows/: ci.yml
capture/: Cargo.toml  Containerfile
capture/src/: brightness.rs  capture.rs  disk.rs  main.rs  server.rs
common/: Cargo.toml
common/src/: classifier_kind.rs  config.rs  discovery.rs  lib.rs  protocol.rs  settings.rs
processing/: Cargo.toml  Containerfile
processing/scripts/: export_models.py
processing/src/: client.rs  db.rs  download.rs  frames.rs  main.rs  model.rs  motion.rs  reporting.rs
video-import/: Cargo.toml  Containerfile
video-import/src/: import.rs  main.rs  server.rs
web/: Cargo.toml  Containerfile
web/src/: app.rs  lib.rs  main.rs  model.rs
web/src/components/: detection_card.rs  mod.rs  nav.rs  stats_bar.rs
web/src/pages/: detections.rs  home.rs  mod.rs  people.rs  settings.rs  species.rs  training.rs
web/src/server/: db.rs
web/style/: main.css
