[workspace]
members = ["common", "capture", "processing", "web", "video-import"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# ── Error handling / utilities ───────────────────────────────
anyhow    = "1"
thiserror = "2"

# ── Serialization ────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# ── Date/time ────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Logging ──────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Async runtime ────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# ── HTTP / web ───────────────────────────────────────────────
axum       = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest    = { version = "0.12", features = ["json", "blocking"] }

# ── File-system ──────────────────────────────────────────────
notify = "7"

# ── Image processing ─────────────────────────────────────────
image = "0.25"

# ── ML inference ─────────────────────────────────────────────
tract-onnx = "0.21"

# ── Database ─────────────────────────────────────────────────
rusqlite = { version = "0.32", features = ["bundled"] }

# ── mDNS discovery ───────────────────────────────────────────
mdns-sd = "0.18"

# ── Signal handling ──────────────────────────────────────────
ctrlc = "3"

# ── Leptos (web UI) ─────────────────────────────────────────
leptos        = "0.6"
leptos_router = "0.6"
leptos_meta   = "0.6"
leptos_axum   = "0.6"
cfg-if        = "1"
tower         = "0.4"
http          = "1"
wasm-bindgen  = "0.2"
console_error_panic_hook = "0.1"

[[workspace.metadata.leptos]]
name            = "gaia-light-web"
bin-package     = "gaia-light-web"
lib-package     = "gaia-light-web"
output-name     = "gaia-light-web"
site-root       = "target/site"
site-pkg-dir    = "pkg"
style-file      = "web/style/main.css"
assets-dir      = "web/public"
site-addr       = "0.0.0.0:8190"
reload-port     = 8191
browserquery    = "defaults"
watch-additional-files = ["web/style"]
env             = "DEV"
bin-features    = ["ssr"]
bin-default-features  = false
lib-features    = ["hydrate"]
lib-default-features  = false

[profile.release]
opt-level = 3
lto = true
strip = true
