[package]
name = "gaia-light-processing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gaia-light-processing"
path = "src/main.rs"

[dependencies]
gaia-light-common = { path = "../common" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
reqwest.workspace = true
image.workspace = true
tract-onnx.workspace = true
rusqlite.workspace = true
ctrlc.workspace = true
