[package]
name = "gaia-light-video-import"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gaia-light-video-import"
path = "src/main.rs"

[dependencies]
gaia-light-common = { path = "../common" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
ctrlc.workspace = true
