[package]
name = "gaia-light-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gaia-light-web"
path = "src/main.rs"

[dependencies]
gaia-light-common = { path = "../common" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
rusqlite.workspace = true
