[package]
name = "gaia-light-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gaia-light-web"
path = "src/main.rs"

[dependencies]
gaia-light-common = { path = "../common", optional = true }

# ── Core Leptos ──────────────────────────────────────────────
leptos        = { workspace = true }
leptos_router = { workspace = true }
leptos_meta   = { workspace = true }

# ── Shared (compiled for both native + wasm) ────────────────
serde      = { workspace = true }
serde_json = { workspace = true }
cfg-if     = { workspace = true }

# ── SSR-only deps (server binary) ───────────────────────────
leptos_axum         = { workspace = true, optional = true }
axum                = { workspace = true, optional = true }
tokio               = { workspace = true, optional = true }
tower               = { workspace = true, optional = true }
tower-http          = { workspace = true, optional = true }
tracing             = { workspace = true, optional = true }
tracing-subscriber  = { workspace = true, optional = true }
libsql              = { workspace = true, optional = true }
reqwest             = { workspace = true, optional = true }
chrono              = { workspace = true, optional = true }
http                = { workspace = true, optional = true }

# ── Hydrate-only deps (WASM client) ─────────────────────────
wasm-bindgen              = { workspace = true, optional = true }
console_error_panic_hook  = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "dep:gaia-light-common",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:libsql",
    "dep:reqwest",
    "dep:chrono",
    "dep:http",
]
